# igor-gateway

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  default.conf  docker-compose.yaml  settings.gradle.kts
igor-gateway/: Cargo.toml  build.rs
igor-gateway-daemon/: Cargo.toml
igor-gateway-daemon/src/: main.rs
igor-gateway/examples/: zwave.rs
igor-gateway/proto/mqtt/: broker_metrics.proto
igor-gateway/src/: config.rs  daemon.rs  db.rs  grpc.rs  helpers.rs  lib.rs  zwave.rs
igor-gateway/src/grpc/: mqtt.rs
mosquitto/: mosquitto.conf  passwd
src/main/kotlin/com/igor/gateway/: IgorGateway.kt
