[package]
name = "igor-gateway-daemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igor-gateway = { path = "../igor-gateway" }
tokio = { version = "0.2", features = ["full"] }
tracing-subscriber = "0.2"
tracing = "0.1"
