[package]
name = "igor-gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-futures = { version = "0.2" }
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
futures = "0.3"
tonic =  { version = "0.3", git = "https://github.com/hyperium/tonic.git", rev = "f1275b611e38ec5fe992b2f10552bf95e8448b17" }
tonic-health = { version = "0.2", git = "https://github.com/hyperium/tonic.git", rev = "f1275b611e38ec5fe992b2f10552bf95e8448b17" }
warp = "0.2"
tower = "0.3"
http = "0.2"
http-body = "0.3"
sqlx = { version = "0.4.0-beta.1", features = ["sqlite"] }
uclicious = "0.1"
uclicious_derive = "0.1"
"openzwave-stateful" = { git = "https://github.com/fxbox/openzwave-stateful-rust" }

[build-dependencies]
tonic-build = "0.3"
